<?xml version="1.0"?>
<package format="2">
  <name>template_controller_msgs</name>
  <version>0.0.0</version>
  <description>The template_controller_msgs package</description>

  <maintainer email="t-hiraoka@jsk.imi.i.u-tokyo.ac.jp">Takuma-Hiraoka</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rtmbuild2</depend>

</package>
