<?xml version="1.0"?>
<package format="2">
  <name>torque_auto_stabilizer_rtc</name>
  <version>0.0.0</version>
  <description>The torque_auto_stabilizer_rtc package </description>

  <maintainer email="t-hiraoka@jsk.imi.i.u-tokyo.ac.jp">Takuma-Hiraoka</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rtmbuild</depend>
  <depend>torque_auto_stabilizer_msgs</depend>
  <depend>choreonoid</depend>

</package>
